Sistema com inserção e desinserção de imagens, falta salvar em sistema local

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Monster Hunter World Iceborn Crowns</title>
 </head>
 
-<body>
-    <table>
+<body id="body">
+    <table onclick="UnhiddenCrowns()">
         <thead>
             <tr>
                 <th colspan="10">Crowns</th>
@@ -19,11 +19,9 @@
         </thead>
         <tbody>
             <tr>
-                <td>Monster</td>
-                <td>Mini Crowns</td>
-                <td>Large Crowns</td>
-                <td>Mark mini crowns</td>
-                <td>Mark large crowns</td>
+                <td id="monster1">Monster</td>
+                <td id="monster2">Mini Crowns</td>
+                <td id="monster3">Large Crowns</td>
             </tr>
             <tbody id="monster">
                 <script type="text/javascript" src="/scripts/main.js"></script>
